--- a/Notes/OSSummer2011/cmspaper.tex
+++ b/Notes/OSSummer2011/cmspaper.tex
@@ -59,7 +59,7 @@
 %  \conferencereport{2005/000}
    \date{27 October 2010}
 
-  \title{Opposite sign di-lepton SUSY search at $\sqrt{s}=7$~TeV}
+  \title{Opposite sign di-lepton SUSY search at $\sqrt{s}=7$~TeV in 2011 data}
 
   \begin{Authlist}
       M.~Edelhoff, L.~Feld, N.~Mohr, D.~Sprenger
@@ -68,13 +68,13 @@
 
   \begin{abstract}
   We present a search for Supersymmetry in opposite sign di-lepton final states 
-  using the data from 2010 proton-proton-running of the Large Hadron Collider. 
+  using the data from 2011 proton-proton-running of the Large Hadron Collider. 
   %The full event selection is based purely on the particle flow event reconstruction.
   The final state signature consists of leptons, several hard jets 
   and missing transverse energy. 
   Since we observe good agreement of data to simulation and our background prediction methods,
   we conclude that there is no sign of flavour correlated di-lepton production 
-  accompanied by high jet activity and large missing transverse energy in the dataset of 34~\pbi.
+  accompanied by high jet activity and large missing transverse energy in the dataset of 204~\pbi.
   We report an upper limit on the flavour correlated production of a new physics model within
   acceptance of our event selection.
   \end{abstract} 
