--- a/Notes/OSSummer2011/introduction.tex
+++ b/Notes/OSSummer2011/introduction.tex
@@ -1,7 +1,7 @@
 \section{Disclaimer}
 
 Please note that most of the methods used in this analysis have also been documented in SUS-08-004,
-SUS-09-002 (AN-2009/83) and AN-2010/167.
+SUS-09-002 (AN-2009/83), AN-2010/167 and AN-2010/373.
 
 \section{Introduction}
 
@@ -13,27 +13,26 @@ been observed up to now which implies that they have to be heavy.
 On the other hand to provide a solution to the hierarchy problem their masses have to be in the TeV range.
 These prejudices lead to a signature of (many) hard jets and large missing transverse energy.
 
-The long anticipated and succesfull start of the Large Hadron Collider (LHC) with a center of mass energy of 7~TeV 
-allows us to explore this new TeV range very early on. 
+%The long anticipated and succesfull start of the Large Hadron Collider (LHC) with a center of mass energy of 7~TeV 
+%allows us to explore this new TeV range very early on. 
 Of special interest are robust signatures in leptonic final states which can be probed with the CMS experiment.
 If R-parity is conserved the lightest neutralino escapes detection and no mass peaks can be observed 
-in SUSY decay chains. 
-%A key point after discovery will be the determination of the sparticle properties. 
+in SUSY decay chains. A key point after discovery will be the determination of the sparticle properties. 
 
 The purpose of this analysis is to observe or exclude a significant excess of di-leptons 
 over the various backgrounds.
-The dataset consists of 34~\pbi of proton-proton collisions collected by CMS during LHC
-running in 2010.
+The dataset consists of 204~\pbi of proton-proton collisions collected by CMS during LHC
+running in 2011.
 
 In Sec.~\ref{sec:signal} we define the signal benchmark points, that are used in this analysis.
 Section~\ref{sec:physobj} describes the technical details of the object selection
-and in Sec.~\ref{sec:eff} we discuss the measured lepton efficiencies.
-Section~\ref{sec:fakes} describes the method used to determine the contribution
+and in Sec.~\ref{sec:eff} we discuss lepton efficiencies used in the background
+prediction.
+Section~\ref{sec:fakes} describes a method to determine the contribution
 of non-prompt leptons in the final event selection.
-In Sec.~\label{sec:eventselection} we define the signal region, which includes a discussion of the main
-expected standard model backgrounds and their yields. Here we also discuss the trigger and its efficiency.
-Section~\ref{sec:ofossubtraction} deals with the background prediction method (opposite flavour subtraction),
-which is used to predict the number of top-pair events in the signal region. We also define a control
-region in data and test that the method holds.
-The results are presented in Sec.~\ref{sec:results} and we discuss the main sources of systematic
-uncertaintes in Sec.~\ref{sec:systematics}. Finally we set a limit and conclude.
+In Sec.~\label{sec:eventselection} we define the signal regions, including a discussion of the main
+Standard Model backgrounds and their yields. %Here we also discuss the trigger and its efficiency.
+Section~\ref{sec:ofossubtraction} deals with the background prediction methods,
+which are used to predict the number of Standard Model backgrounds in the signal
+regions. The results are presented in Sec.~\ref{sec:results}. 
+Finally we set a limit and conclude.
