--- a/Notes/OSSummer2011/cmspaper.tex
+++ b/Notes/OSSummer2011/cmspaper.tex
@@ -97,11 +97,9 @@
 \input{efficiency}
 %\input{fakebackground}
 \input{eventselection}
-%\input{xsection}
 \input{ofossubtraction}
-%\input{jzbalance}
 \input{results}
-\input{systematics}
+%\input{systematics}
 \input{significance}
 \input{conclusion}
 %============
