--- a/Notes/OSSummer2011/results.tex
+++ b/Notes/OSSummer2011/results.tex
@@ -1,50 +1,98 @@
 \section{Results}\label{sec:results}
 
-The SM background predictions in the signal region are summarized in Tab.~\ref{tab:results}. 
-Some control distributions after the opposite sign dilepton selection and \HT requirement are shown
-in Appendix~\ref{app:controlplots}. 
-We observe a good data to MC agreement and do not observe a large number of fake leptons even without
-\MET requirement.
-%The \MET distribution for events statisfying this selection is shown in Fig.~\ref{fig:metfull}.
-In the signal region we observe one event in the $e\mu$-category and an event display is in Appendix~\ref{app:eventdisp}.
-
-%\begin{figure}[htb]
-%\begin{center}
-%\includegraphics[width=0.7\textwidth]{Nov8th_pfHadSusyCuts_PD_MultiJet_MET_METN1}
-
-%\caption{\label{fig:metfull} \protect \MET distribution after full event selection of $\HT>350$~GeV and two OS leptons in data (points) and stacked Monte Carlo samples (histograms).}
-%\end{center}
-%\end{figure}
-
-Additionally the consistency of the background prediction method is 
-checked in the control region, where we predict $25.0 \pm 5.0$ 
-same-flavor events and observe $25$ (Sec.~\ref{sec:ofossubtraction}).
-
+In Tab.~\ref{tab:predict2010} the yields and the background predictions
+from the three methods are listed for the signal region used for the analysis
+of the 2010 data. Good agreement between prediction and
+observation is seen.
 
 \begin{table}[hbt]
 \begin{center}
-\caption{\label{tab:results}Number of predicted and observed events in the signal region, defined as: $H_T > 350$~GeV and $\met> 150$.}
+\caption{\label{tab:predict2010}Number of predicted and observed events in the 2010 signal region, 
+    defined as: $H_T > 350$~GeV and $\met > 150$~GeV.}
 \begin{tabular}{l|cc}
 \hline
-                       &   \multicolumn{2}{c}{Signal Region}          \\
+                       & \multicolumn{2}{c}{2010 signal region}               \\
 \hline 
-Process                      & $ee$                   & $\mu\mu$  \\
+Process                & $ee$          & $\mu\mu$        \\
 \hline
-$t\bar{t}$ from $e\mu$    & $0.4 {}_{-0.4}^{+1.0}$ & $0.5 {}_{-0.4}^{+1.2}$  \\
-Fake leptons                & 0                      & 0                        \\
+$t\bar{t}$ from $e\mu$ & $11.7\pm 2.4$ & $13.4\pm 2.8$   \\
+Fake leptons           & $0.5\pm 0.3$  & $0.4\pm0.2$                  \\
 \hline
-Total predicted         & $0.4 {}_{-0.4}^{+1.0}$ & $0.5 {}_{-0.4}^{+1.2}$   \\
+Total predicted        & $12.2\pm 2.4$ & $13.8 \pm 2.8$  \\
 \hline\hline
-Total observed                   & $0$                    & $0$  \\
+Total observed         & $10$          & $15$          \\
 \hline \hline
-SM MC         & $0.38\pm 0.08$         & $0.56 \pm 0.07$ \\
-LM0                    & $3.4\pm0.2$            & $3.9\pm0.2$  \\
-LM1                    & $1.6\pm0.1$            & $2.0\pm0.1$  \\
+SM MC         & $8.4\pm 0.2$  & $10.5 \pm 0.3$    \\
+LM0                    &  $3.7\pm0.2$  & $4.2\pm0.2$     \\
+LM1                    &  $0.5\pm0.1$  & $0.7\pm0.1$     \\
 
 \hline
 \end{tabular}
 \end{center}
 \end{table}
+
+
+In Tab.~\ref{tab:predictHighMET} the yields and the background predictions
+from the three methods are listed for the signal region defined by a tight
+\MET selection. We observe good agreement between prediction
+and observation.
+
+\begin{table}[hbt]
+\begin{center}
+\caption{\label{tab:predictHighMET}Number of predicted and observed events in the high \MET signal region, 
+    defined as: $H_T > 250$~GeV and $\met > 250$~GeV.}
+\begin{tabular}{l|cc}
+\hline
+                       & \multicolumn{2}{c}{High \MET Region}               \\
+\hline 
+Process                & $ee$          & $\mu\mu$        \\
+\hline
+$t\bar{t}$ from $e\mu$ & $11.7\pm 2.4$ & $13.4\pm 2.8$   \\
+Fake leptons           & $0.5\pm 0.3$  & $0.4\pm0.2$                  \\
+\hline
+Total predicted        & $12.2\pm 2.4$ & $13.8 \pm 2.8$  \\
+\hline\hline
+Total observed         & $10$          & $15$          \\
+\hline \hline
+SM MC         & $8.4\pm 0.2$  & $10.5 \pm 0.3$    \\
+LM0                    &  $3.7\pm0.2$  & $4.2\pm0.2$     \\
+LM1                    &  $0.5\pm0.1$  & $0.7\pm0.1$     \\
+
+\hline
+\end{tabular}
+\end{center}
+\end{table}
+
+Tab.~\ref{tab:predictHighMET} compares the yields and the background predictions
+from the three background prediction methods for the signal region defined by a tight
+\HT selection. A good agreement between prediction and observation can be seen.
+
+\begin{table}[hbt]
+\begin{center}
+\caption{\label{tab:predictHighMET}Number of predicted and observed events in the high \HT signal region, 
+    defined as: $H_T > 600$~GeV and $\met > 100$~GeV.}
+\begin{tabular}{l|cc}
+\hline
+                       & \multicolumn{2}{c}{High \HT region}               \\
+\hline 
+Process                & $ee$          & $\mu\mu$        \\
+\hline
+$t\bar{t}$ from $e\mu$ & $11.7\pm 2.4$ & $13.4\pm 2.8$   \\
+Fake leptons           & $0.5\pm 0.3$  & $0.4\pm0.2$                  \\
+\hline
+Total predicted        & $12.2\pm 2.4$ & $13.8 \pm 2.8$  \\
+\hline\hline
+Total observed         & $10$          & $15$          \\
+\hline \hline
+SM MC         & $8.4\pm 0.2$  & $10.5 \pm 0.3$    \\
+LM0                    &  $3.7\pm0.2$  & $4.2\pm0.2$     \\
+LM1                    &  $0.5\pm0.1$  & $0.7\pm0.1$     \\
+
+\hline
+\end{tabular}
+\end{center}
+\end{table}
+
 
 We find one event in the signal region in the $e\mu$-lepton combination with a fake prediction
 of $0.1\pm0.1$, and thus predict $0.9 {}_{-0.8}^{+2.2}$ same-flavour events.
