--- a/Notes/OSSummer2011/eventselection.tex
+++ b/Notes/OSSummer2011/eventselection.tex
@@ -51,18 +51,18 @@ the signal region of $H_T> 100$~GeV and $\MET> 100$~GeV. The errors reflect the 
 \hline
 Process           & $ee$       & $\mu\mu$     & $e\mu$   & total   \\
 \hline\hline
-$t\bar{t}$       &$0.39 \pm 0.04$&$0.5 \pm 0.05$&$0.79 \pm 0.06$&$1.68 \pm 0.09$\\
-$Z+\textrm{jets}$  &$0.0 \pm 0.07$&$0.08 \pm 0.05$&$0.11 \pm 0.07$&$0.19 \pm 0.11$\\
-$W+\textrm{jets}$  &$0.0 \pm 0.32$&$0.0 \pm 0.32$&$0.0 \pm 0.32$&$0.0 \pm 0.32$\\
-Di-boson          & $0.02 \pm 0.01$&$0.03 \pm 0.01$&$0.03 \pm 0.01$ & $0.08\pm 0.02$ \\
+$W+\textrm{jets}$ &$0.0 \pm 0.0$&$0.0 \pm 0.0$&$0.0 \pm 0.0$&$0.0 \pm 0.0$\\
+$Z\rightarrow ll+\textrm{jets}$&$0.16 \pm 1.76$&$0.76 \pm 2.05$&$0.04 \pm 1.86$&$0.95 \pm 3.28$\\
+$Z \rightarrow \tau\tau$&$0.27 \pm 0.89$&$0.87 \pm 1.08$&$1.18 \pm 1.17$&$2.33 \pm 1.82$\\
+$t\bar{t}$&$33.49 \pm 1.3$&$43.98 \pm 1.49$&$77.11 \pm 1.97$&$154.58 \pm 2.8$\\
 \hline
-Total background  &$0.41 \pm 0.33$&$0.53 \pm 0.33$&$1. \pm 0.33$&$2. \pm 0.32$\\
+Total background&$33.92 \pm 2.36$&$45.61 \pm 2.76$&$78.33 \pm 2.95$&$157.86 \pm 4.68$\\\hline
 \hline
-Data  & 0 & 0 & 1 & 1 \\
+Data  & 44 & 47 & 101 & 192 \\
 \hline\hline
-LM0               &$3.41 \pm 0.17$&$3.91 \pm 0.17$&$4.52 \pm 0.14$&$11.84 \pm 0.42$ \\
-LM1               &$1.64 \pm 0.04$&$2.02 \pm 0.04$&$1.01 \pm 0.03$&$4.64 \pm 0.07$ \\
-\hline
+%LM0               &$3.41 \pm 0.17$&$3.91 \pm 0.17$&$4.52 \pm 0.14$&$11.84 \pm 0.42$ \\
+%LM1               &$1.64 \pm 0.04$&$2.02 \pm 0.04$&$1.01 \pm 0.03$&$4.64 \pm 0.07$ \\
+%\hline
 \end{tabular}
 \end{center}
 \end{table}
@@ -101,18 +101,18 @@ the signal region of $H_T> 350$~GeV and $\MET> 150$~GeV. The errors reflect the 
 \hline
 Process           & $ee$       & $\mu\mu$     & $e\mu$   & total   \\
 \hline\hline
-$t\bar{t}$       &$0.39 \pm 0.04$&$0.5 \pm 0.05$&$0.79 \pm 0.06$&$1.68 \pm 0.09$\\
-$Z+\textrm{jets}$  &$0.0 \pm 0.07$&$0.08 \pm 0.05$&$0.11 \pm 0.07$&$0.19 \pm 0.11$\\
-$W+\textrm{jets}$  &$0.0 \pm 0.32$&$0.0 \pm 0.32$&$0.0 \pm 0.32$&$0.0 \pm 0.32$\\
-Di-boson          & $0.02 \pm 0.01$&$0.03 \pm 0.01$&$0.03 \pm 0.01$ & $0.08\pm 0.02$ \\
+$W+\textrm{jets}$&$0.0 \pm 0.0$&$0.0 \pm 0.0$&$0.0 \pm 0.0$&$0.0 \pm 0.0$\\
+$Z\rightarrow ll+\textrm{jets}$&$0.0 \pm 1.97$&$0.0 \pm 1.97$&$0.0 \pm 1.97$&$0.0 \pm 0.27$\\
+$Z \rightarrow \tau\tau$&$0.0 \pm 1.0$&$0.0 \pm 1.0$&$0.0 \pm 1.0$&$0.0 \pm 0.27$\\
+$t\bar{t}$&$3.44 \pm 0.42$&$4.26 \pm 0.47$&$7.46 \pm 0.63$&$15.17 \pm 0.9$\\
 \hline
-Total background  &$0.41 \pm 0.33$&$0.53 \pm 0.33$&$1. \pm 0.33$&$2. \pm 0.32$\\
+Total background&$3.44 \pm 2.25$&$4.26 \pm 2.26$&$7.46 \pm 2.3$&$15.17 \pm 0.98$\\
 \hline
-Data  & 0 & 0 & 1 & 1 \\
+Data  & 3 & 3 & 4 & 10 \\
 \hline\hline
-LM0               &$3.41 \pm 0.17$&$3.91 \pm 0.17$&$4.52 \pm 0.14$&$11.84 \pm 0.42$ \\
-LM1               &$1.64 \pm 0.04$&$2.02 \pm 0.04$&$1.01 \pm 0.03$&$4.64 \pm 0.07$ \\
-\hline
+%LM0               &$3.41 \pm 0.17$&$3.91 \pm 0.17$&$4.52 \pm 0.14$&$11.84 \pm 0.42$ \\
+%LM1               &$1.64 \pm 0.04$&$2.02 \pm 0.04$&$1.01 \pm 0.03$&$4.64 \pm 0.07$ \\
+%\hline
 \end{tabular}
 \end{center}
 \end{table}
@@ -144,18 +144,18 @@ the signal region of $H_T> 600$~GeV and $\MET> 100$~GeV. The errors reflect the 
 \hline
 Process           & $ee$       & $\mu\mu$     & $e\mu$   & total   \\
 \hline\hline
-$t\bar{t}$       &$0.39 \pm 0.04$&$0.5 \pm 0.05$&$0.79 \pm 0.06$&$1.68 \pm 0.09$\\
-$Z+\textrm{jets}$  &$0.0 \pm 0.07$&$0.08 \pm 0.05$&$0.11 \pm 0.07$&$0.19 \pm 0.11$\\
-$W+\textrm{jets}$  &$0.0 \pm 0.32$&$0.0 \pm 0.32$&$0.0 \pm 0.32$&$0.0 \pm 0.32$\\
-Di-boson          & $0.02 \pm 0.01$&$0.03 \pm 0.01$&$0.03 \pm 0.01$ & $0.08\pm 0.02$ \\
+$W+\textrm{jets}$&$0.0 \pm 0.0$&$0.0 \pm 0.0$&$0.0 \pm 0.0$&$0.0 \pm 0.0$\\
+$Z\rightarrow ll+\textrm{jets}$&$0.08 \pm 1.47$&$0.0 \pm 1.97$&$0.0 \pm 1.97$&$0.08 \pm 3.15$\\
+$Z \rightarrow \tau\tau$&$0.0 \pm 1.0$&$0.0 \pm 1.0$&$0.0 \pm 1.0$&$0.0 \pm 0.27$\\
+$t\bar{t}$&$1.11 \pm 0.23$&$1.69 \pm 0.31$&$2.7 \pm 0.41$&$5.5 \pm 0.56$\\
 \hline
-Total background  &$0.41 \pm 0.33$&$0.53 \pm 0.33$&$1. \pm 0.33$&$2. \pm 0.32$\\
+Total background &$1.19 \pm 1.8$&$1.69 \pm 2.23$&$2.7 \pm 2.25$&$5.58 \pm 3.22$\\
 \hline
-Data  & 0 & 0 & 1 & 1 \\
+Data  & 2 & 0 & 2 & 4 \\
 \hline\hline
-LM0               &$3.41 \pm 0.17$&$3.91 \pm 0.17$&$4.52 \pm 0.14$&$11.84 \pm 0.42$ \\
-LM1               &$1.64 \pm 0.04$&$2.02 \pm 0.04$&$1.01 \pm 0.03$&$4.64 \pm 0.07$ \\
-\hline
+%LM0               &$3.41 \pm 0.17$&$3.91 \pm 0.17$&$4.52 \pm 0.14$&$11.84 \pm 0.42$ \\
+%LM1               &$1.64 \pm 0.04$&$2.02 \pm 0.04$&$1.01 \pm 0.03$&$4.64 \pm 0.07$ \\
+%\hline
 \end{tabular}
 \end{center}
 \end{table}
@@ -188,18 +188,18 @@ the signal region of $H_T> 250$~GeV and $\MET> 250$~GeV. The errors reflect the 
 \hline
 Process           & $ee$       & $\mu\mu$     & $e\mu$   & total   \\
 \hline\hline
-$t\bar{t}$       &$0.39 \pm 0.04$&$0.5 \pm 0.05$&$0.79 \pm 0.06$&$1.68 \pm 0.09$\\
-$Z+\textrm{jets}$  &$0.0 \pm 0.07$&$0.08 \pm 0.05$&$0.11 \pm 0.07$&$0.19 \pm 0.11$\\
-$W+\textrm{jets}$  &$0.0 \pm 0.32$&$0.0 \pm 0.32$&$0.0 \pm 0.32$&$0.0 \pm 0.32$\\
-Di-boson          & $0.02 \pm 0.01$&$0.03 \pm 0.01$&$0.03 \pm 0.01$ & $0.08\pm 0.02$ \\
+$W+\textrm{jets}$ &$0.0 \pm 0.0$&$0.0 \pm 0.0$&$0.0 \pm 0.0$&$0.0 \pm 0.0$\\
+$Z\rightarrow ll+\textrm{jets}$&$0.0 \pm 1.97$&$0.0 \pm 1.97$&$0.0 \pm 1.97$&$0.0 \pm 0.27$\\
+$Z \rightarrow \tau\tau$&$0.0 \pm 1.0$&$0.0 \pm 1.0$&$0.0 \pm 1.0$&$0.0 \pm 0.27$\\
+$t\bar{t}$&$0.4 \pm 0.16$&$1.0 \pm 0.23$&$1.68 \pm 0.28$&$3.08 \pm 0.4$\\
 \hline
-Total background  &$0.41 \pm 0.33$&$0.53 \pm 0.33$&$1. \pm 0.33$&$2. \pm 0.32$\\
+Total background &$0.4 \pm 2.22$&$1.0 \pm 2.22$&$1.68 \pm 2.23$&$3.08 \pm 0.56$\\
 \hline
-Data  & 0 & 0 & 1 & 1 \\
+Data  & 3 & 0 & 3 & 6 \\
 \hline\hline
-LM0               &$3.41 \pm 0.17$&$3.91 \pm 0.17$&$4.52 \pm 0.14$&$11.84 \pm 0.42$ \\
-LM1               &$1.64 \pm 0.04$&$2.02 \pm 0.04$&$1.01 \pm 0.03$&$4.64 \pm 0.07$ \\
-\hline
+%LM0               &$3.41 \pm 0.17$&$3.91 \pm 0.17$&$4.52 \pm 0.14$&$11.84 \pm 0.42$ \\
+%LM1               &$1.64 \pm 0.04$&$2.02 \pm 0.04$&$1.01 \pm 0.03$&$4.64 \pm 0.07$ \\
+%\hline
 \end{tabular}
 \end{center}
 \end{table}
