added tau stuff

--- a/Notes/OSSummer2011/cmspaper.tex
+++ b/Notes/OSSummer2011/cmspaper.tex
@@ -100,6 +100,11 @@
 \input{ofossubtraction}
 \input{results}
 %\input{systematics}
+\input{tauSignal}
+\input{tauId}
+%\input{tauSelection}
+\input{tauFakebackground}
+\input{tauResults}
 \input{significance}
 \input{conclusion}
 %============
