yet another problem with filename case

--- a/Notes/OSSummer2011/cmspaper.tex
+++ b/Notes/OSSummer2011/cmspaper.tex
@@ -103,7 +103,7 @@
 \input{tauSignal}
 \input{tauId}
 %\input{tauSelection}
-\input{tauFakebackground}
+\input{tauFakeBackground}
 \input{tauResults}
 \input{significance}
 \input{conclusion}
