added some trigger information and fake rate methode subsection

--- a/Notes/OSSummer2011/cmspaper.tex
+++ b/Notes/OSSummer2011/cmspaper.tex
@@ -98,6 +98,7 @@
 %\input{fakebackground}
 \input{eventselection}
 \input{ofossubtraction}
+\input{fakeratemethod}
 \input{results}
 %\input{systematics}
 \input{tauSignal}
